--- a/app/app.component.html
+++ b/app/app.component.html
@@ -1,6 +1,7 @@
 <h1>Navigation</h1>
 
-<a routerLink="/home">home</a>
+<a routerLink="/home">Home</a>
 <a routerLink="/documents">Docs</a>
+<a routerLink="/proposals">Proposals</a>
 
 <router-outlet></router-outlet>
