--- a/app/app.component.html
+++ b/app/app.component.html
@@ -9,7 +9,7 @@
 			</li>
 			<li>
 				<div ngbDropdown class="d-inline-block dropdown-links dropdown">
-					<button class="btn btn-outline-primary" id="proposalDropdown" ngbDropdownToggle>
+					<button class="btn btn-outline-success my-2 my-sm-0" id="proposalDropdown" ngbDropdownToggle>
 						Proposals
 					</button>
 					<div class="dropdown-menu" aria-labelledby="proposalDropdown">
