--- a/app/app.component.html
+++ b/app/app.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-toggleable-md navbar-light bg-faded nav-styles">
+<nav class="navbar navbar-fixed-top navbar-light bg-faded nav-styles">
 	<div class='container'>	
 		<ul class="nav navbar-nav">
 			<li class='nav-item'>
@@ -7,9 +7,9 @@
 			<li class='nav-item'>
 				<a class='nav-link' routerLink="/documents" routerLinkActive="active">Docs</a>
 			</li>
-			<li>
-				<div ngbDropdown class="d-inline-block dropdown-links dropdown">
-					<button class="btn btn-outline-success my-2 my-sm-0" id="proposalDropdown" ngbDropdownToggle>
+			<li class="nav-item dropdown">
+				<div ngbDropdown class="d-inline-block dropdown-links">
+					<button class="btn btn-outline-primary" id="proposalDropdown" ngbDropdownToggle>
 						Proposals
 					</button>
 					<div class="dropdown-menu" aria-labelledby="proposalDropdown">
