Styling show proposal page

--- a/freelanceltx/app/proposal/proposal-show.component.html
+++ b/freelanceltx/app/proposal/proposal-show.component.html
@@ -3,7 +3,7 @@
 		 <!-- we need the *ngIF because the functions are being called before the data is fetch -->
 		<h1>{{ proposal.customer }}</h1>
 
-		<div class="col-md-12">
+		<div>
 			<p>Hi {{ proposal.customer }},</p>
 
 
